# agentic-text-to-sql

./: .gitignore  main-test.py  main.py  pyproject.toml  sample.db  system.py  testing.ipynb
config/: prompts.ini  settings.ini
database/: __init__.py  base.py  csv_connector.py  postgres_connector.py  sql_server_connector  sqlite_connector.py
llm_providers/: __init__.py  azure_providers.py  base.py  gemini_providers.py  groq_providers.py  llama_providers.py  openai_providers.py
text_to_sql/: generator-v1.py  generator.py  state.py  workflow-v1.py  workflow.py
utils/: config.py  logging.py  models.py  security.py  sql_validation.py
