[project]
name = "agentic-text-to-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.21.1",
    "groq>=0.28.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.24",
    "langgraph>=0.4.8",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
    "sqlparse>=0.5.3",
]
